# nnet

./: .gitignore  CMakeLists.txt
cmake/: nnetlib-config.cmake.in  utils.cmake
include/nnetlib/: export.h  nnetlib.h
prepdataset/: CMakeLists.txt
splitter/: CMakeLists.txt
splitter/include/: ctype.h  euidaccess.h  hash.h  inttostr.h  nproc.h  pathmax.h  progname.h  propername.h  splitter.h  system.h  tempname.h  usage.h  xalloc.h
splitter/src/: euidaccess.c  hash.c  nproc.c  physmem.c  physmem.cpp  progname.c  propername.c  splitter.c  splitter.cpp  tempname.c  usage.c  xalloc.c
src/: nnetlib.c
